# ComputerV1-42

./: .gitignore  pyproject.toml  test.ipynb  tests.ipynb
compoot/: Monome.py
compooter/: Complex.py  Monome.py  Parser.py  Polynome.py  __init__.py  cli.py
